# code-graph-system

./: .gitignore  100_PERCENT_SUCCESS_REPORT.md  ARCHITECTURE_IMPROVEMENTS.md  AUDIT_REPORT.md  BASE_IDEA.md  CLAUDE.md  COMPLETE_HIERARCHY_VISUALIZATION.cypher  CONTRIBUTING.md  CRITICAL_FIXES_NEEDED.md  DEBUG_PLAN.md  DETAILED_IMPLEMENTATION_GUIDE.md  ESPOCRM_CODE_GRAPH_PLAN.md  FINAL_COMPLETE_VISUALIZATION.cypher  GOAL.md  GOAL_COMPLETION_REPORT.md  HOW_TO_QUERY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  JAVASCRIPT_PARSER_PLAN.md  MASTER_IMPLEMENTATION_PLAN.md  MEGA_GRAPH_QUERIES.md  Makefile  NEXT_FIX_PLAN.md  PARSER_IMPLEMENTATION_PLAN.md  PLAN.md  QUERY_VERIFICATION_REPORT.md  README.md  RELATIONSHIP_IMPLEMENTATION_PLAN.md  SYSTEM_DOCUMENTATION.md  VALIDATION_RESULTS.md  VISUALIZE_SERVICE.md  WORKFLOW.md  WORKING_GRAPH_QUERIES.cypher  add_config_refs.cypher  clean_neo4j.py  composer.json  config.yaml  debug_js_imports.py  (+37 more)
code-graph-system/: README.md  REFINED_ARCHITECTURE.md  setup.py
code_graph_system/: cli.py
data/: test2.db
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  CODEBASE_REVISION_PLAN.md  COMPLETE_ESPOCRM_ANALYSIS.md  COMPREHENSIVE_TEST_PLAN.md  CONFIGURATION.md  DATA_MODEL.md  EDGE_DESIGN_REQUIREMENTS.md  FINAL_SUMMARY.md  FINAL_TEST_REPORT.md  FIXES_PLAN.md  FIX_PLAN.md  FULL_TEST_REPORT.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  NEXT_LEVEL_PLAN.md  QUERYING.md  TESTING_PLAN.md  TESTING_RESULTS.md  TEST_SUMMARY.md  UNIVERSAL_CODE_GRAPH_ARCHITECTURE.md  current_state_analysis.md  graph_io_notes.md
examples/: mini-app.yaml  python-app.yaml
indexing_scripts/: clean_neo4j_enhanced.py  create_calls_relationships.py  demo_indexing.py  final_demo.py  index_complete_espocrm.py  index_complete_espocrm_optimized.py  index_espocrm_complete_fixed.py  index_javascript.py  reindex_and_link.py
parsers/: js_espocrm_parser.py  js_parser.py  metadata_parser.py  php_enhanced.py  php_reference_resolver.py  python_parser.py
symbol_table/: resolution.py  symbol_table.py
test_docs/: CURRENT_NEO4J_STATUS.md  NEO4J_DATA_VERIFICATION_REPORT.md  SYSTEMATIC_TEST_PLAN.md  run_tests.py
tests/: test_api_detection.py  test_ast_indexing.py  test_complete_coverage.py  test_complete_demo.py  test_e2e.py  test_enhanced_parser.php  test_espocrm_coverage.php  test_espocrm_patterns.php  test_import_fix.py  test_javascript_enhanced_parser.py  test_js_api.js  test_js_parser.py  test_simple.py  (+6 more)
(+311 files in other folders)
